tests/fixtures/coflow/invalid/lex/unexpected-char.cf
a = ?
b = !
c = value | other
d = left & right
